[package]
name = "rust-bls-bn254"
description = "A rust crate implementing the BLS signatures using BN254 from arkworks"
version = "0.2.1"
edition = "2021"
license = "MIT"
readme = "README.md"
rust-version = "1.79"
keywords = ["cryptography", "BLS", "BN254", "ethereum", "signature"]
categories = ["cryptography"]
exclude = [
    "tests/*",
]

[dependencies]
ark-ff = { version = "0.5.0", default-features = false }
ark-bn254 = { version = "0.5.0", features = ["curve"], default-features = false }
ark-std = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
sha2 = { version = "0.10.6", default-features = false }
num-bigint = { version = "0.4.6", features = ["serde"]}
pbkdf2 = "0.12.2"
unicode-normalization = "0.1"
rand = "0.8.5"
hkdf = "0.12.4"
num-traits = "0.2.19"
hex = "0.4"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
scrypt = "0.11.0"
aes = "0.8.4"
ctr = "0.9.2"
uuid = { version = "0.8", features = ["v4"] }
ark-serialize = "0.5.0"
thiserror = "1.0"


[dev-dependencies]
rand_core = {version = "0.6.4", features = ["getrandom"] }
hex = { version = "0.4.3" }
hex-literal = "0.4.1"
json = { version = "0.12.4" }
proptest = "1.0"
assert_matches = "1.5.0"

[features]
default = ["std"]
std = [
    "ark-ff/std",
    "ark-bn254/std",
    "ark-std/std",
    "ark-ec/std",
    "sha2/std",
]

[[test]]
name = "keystore"
path = "tests/keystore_tests.rs"

[[test]]
name = "mnemonics"
path = "tests/mnemonic_tests.rs"

[[test]]
name = "tree"
path = "tests/tree_tests.rs"

[[test]]
name = "path"
path = "tests/path_tests.rs"




[workspace]
members = ["."]
